# flow-lang

./: .gitignore  CLAUDE.md  Cargo.toml  FLOW_LANGUAGE_SPEC.md  IMPLEMENTATION_TASKS.md  PHASE1_COMPLETE.md  README.md
.github/workflows/: ci.yml
examples/: fibonacci.flow  hello.flow
flow-cli/: Cargo.toml
flow-cli/src/: main.rs
flow-lsp/: Cargo.toml
flow-lsp/src/: main.rs
flow-wasm/: Cargo.toml
flow-wasm/src/: lib.rs
src/: lib.rs  main.rs
src/ffi/: mod.rs
src/interpreter/: mod.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/runtime/: mod.rs
src/testing/: mod.rs
src/types/: mod.rs  type_system.rs
tests/: parser_test.rs  type_system_test.rs
